--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "doc": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.5.0",
@@ -19,5 +20,8 @@
     "react-dom": "^16.8.6",
     "recompose": "^0.30.0",
     "stripe": "^8.50.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.3"
   }
 }
