--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@brainhubeu/react-carousel": "^1.15.4",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@stripe/stripe-js": "^1.5.0",
+    "@yazanaabed/react-tabs": "^2.3.6",
     "core-js": "^2.6.5",
     "firebase": "^6.0.2",
     "gatsby": "^2.4.3",
