Contact Us - and modal

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@ GATSBY_STORAGE_BUCKET=test-auth-22897.appspot.com
 GATSBY_MESSAGING_SENDER_ID=109491845503
 STRIPE_SECRET_KEY=sk_test_7f7WefTSShdmTMYY7GBqtOul003aBDSrM8
 STRIPE_PRIVATE_KEY=pk_test_otlCMQr27HLAResnZt09JSUi00mY7pkTeq
+YOUR_GOOGLE_MAPS_STATIC_API_KEY=AIzaSyCYYuO8lTA6_BlN2kj5iOxmSGBqfsQG5X4
